[tool.poetry]
name = "aws-tools"
version = "0.1.0"
description = ""
authors = ["Vassili Gorshkov <vassili.gorshkov@atlasgurus.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.47"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
